--- a/TestGuru/public/about.html
+++ b/TestGuru/public/about.html
@@ -5,6 +5,6 @@
   </head>
 
   <body>
-    <p><center> First RAILS project - TestGuru. Task of <a href="https://www.thinknetica.com">Thinknetica</a> platform! </center></p>
+    <p><center> First RAILS project - TestGuru. Task of <a href="https://www.thinknetica.com" target=”_blank”>Thinknetica</a> platform! </center></p>
   </body>
 </html>
