--- a/TestGuru/public/about/author.html
+++ b/TestGuru/public/about/author.html
@@ -5,6 +5,6 @@
   </head>
 
   <body>
-    <p><center> Developed by <a href="https://github.com/shilin-anton">Shilin A.D.</a></center></p>
+    <p><center> Developed by <a href="https://github.com/shilin-anton" target=”_blank”>Shilin A.D.</a></center></p>
   </body>
 </html>
